# passcheck

./: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile  README.md  makefile
include/: logger.h  passcheck.h
src/: logger.c  main.c  passcheck.c  passcheck.h
